--- a/src/assets/css/admin/video-films/video-films.css
+++ b/src/assets/css/admin/video-films/video-films.css
@@ -45,9 +45,9 @@
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
   border-radius: 6px; /* border radius */
-  -moz-box-shadow: 3px 4px 5px rgba(1, 1, 1, .08); /* drop shadow */
-  -webkit-box-shadow: 3px 4px 5px rgba(1, 1, 1, .08); /* drop shadow */
-  box-shadow: 3px 4px 5px rgba(1, 1, 1, .08); /* drop shadow */
+  -moz-box-shadow: 3px 4px 5px rgba(1, 1, 1, 0.08); /* drop shadow */
+  -webkit-box-shadow: 3px 4px 5px rgba(1, 1, 1, 0.08); /* drop shadow */
+  box-shadow: 3px 4px 5px rgba(1, 1, 1, 0.08); /* drop shadow */
 }
 .video-header-wrap {
   padding-left: 10px;
@@ -77,7 +77,7 @@
   position: relative;
 }
 .video-detail-wrap::after {
-  content: "";
+  content: '';
   background-image: url('../../../images/admin/video-films/vertical-seprator.png');
   display: block;
   height: 35px;
@@ -180,39 +180,6 @@
 }
 .text-green {
   color: #00991a;
-}
-
-.custom-pagination {
-  float: right;
-  margin-top: 0;
-  margin-bottom: 30px;
-}
-.custom-pagination a {
-  border: 0 !important;
-  color: #555 !important;
-}
-.custom-pagination li.active a,
-.custom-pagination li.active a:hover,
-.custom-pagination li.active a:focus,
-.custom-pagination li.active a:active {
-  background: #fff;
-  color: #f9a11d !important;
-}
-.custom-pagination li:first-child a {
-  border-top-left-radius: 2em;
-  border-bottom-left-radius: 2em;
-  font-size: 14px !important;
-  padding: 0 5px 0 15px !important;
-}
-.custom-pagination li:last-child a {
-  border-top-right-radius: 2em;
-  border-bottom-right-radius: 2em;
-  padding: 0 15px 0 5px !important;
-}
-.custom-pagination li:first-child a span,
-.custom-pagination li:last-child a span {
-  font-size: 23px !important;
-  color: #f9a11d !important;
 }
 
 /*common css ended*/
