put loader while image is loading and remove warnings in header page

--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -15,6 +15,9 @@
   background: rgba(0, 0, 0, 0.8);
   display: none;
 }
+.image-loader-overlay {
+  display: block;
+}
 .loadingCirclePoint___3md-S:before {
   content: '';
   display: block;
