--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -241,6 +241,9 @@
   padding-bottom: 30px;
   box-shadow: 3px 4px 5px rgba(1, 1, 1, 0.08);
 }
+.custom-pic-selection label {
+  background: #c8c8c8 !important;
+}
 /* Share album page css end */
 
 /* Error page css start */
