--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -453,6 +453,20 @@ div.filepicker {
 .custom-cover-pic {
   z-index: 5;
 }
+.admin-view-comment {
+  left: 30px;
+  position: absolute;
+  top: 15px;
+  margin: 0;
+  z-index: 1;
+  cursor: pointer;
+}
+.admin-custom-view-comment-icon {
+  background: #f9a11d;
+  text-align: center;
+  border-radius: 50%;
+  padding: 2px;
+}
 /* album detail page css end */
 
 /* admin header page css start */
