implement select all in view album page

--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -540,6 +540,11 @@ div.filepicker {
   margin-top: 15px;
   margin-bottom: -15px;
 }
+.shared-album-select-all {
+  float: left;
+  margin-top: 0px;
+  padding-left: 20px;
+}
 /* end pulic view album in Album Listing Page */
 /* start video Listing page */
 .sortBy-records {
