--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -254,7 +254,8 @@
   cursor: not-allowed;
 }
 .custom-add-comment-icon {
-  float: right;
+  /* float: right; */
+  text-align: center;
 }
 .custom-view-comment-icon {
   float: left;
