--- a/src/assets/css/admin/homepage_gallery/homepage-gallery.css
+++ b/src/assets/css/admin/homepage_gallery/homepage-gallery.css
@@ -167,7 +167,8 @@
 .slider-num .edit-slide{
     position: absolute;
     right: 10px; 
-    top: 8px;
+    top: 2px;
+    color: #fff;
 }
 .pic-selection-check{
     position: absolute;
