--- a/src/assets/css/admin/category/categories.css
+++ b/src/assets/css/admin/category/categories.css
@@ -60,9 +60,11 @@
   padding: 6px 18px;
   height: 35px;
   position: relative;
-  font-size: 16px;
+  font-size: 14px;
   text-transform: uppercase;
   border: 2px solid #f9a11d;
+  font-family: 'ralewaysemibold';  
+  
 }
 .add-new-btn:hover,
 .add-new-btn:focus,
