--- a/src/assets/css/admin/contact/contacts.css
+++ b/src/assets/css/admin/contact/contacts.css
@@ -8,7 +8,7 @@
   padding: 6px 18px;
   height: 35px;
   position: relative;
-  font-size: 16px;
+  font-size: 14px;
   text-transform: uppercase;
   border: 2px solid #f9a11d;
 }
@@ -26,7 +26,10 @@
   height: 18px;
   width: 18px;
   padding: 0;
+  border-radius: 50%;
+  border: 1px solid #fff;
   line-height: 16px;
+  font-size: 10px;
   margin-right: 5px;
   margin-top: 1px;
   float: left;
