--- a/src/assets/css/contact/about-us.css
+++ b/src/assets/css/contact/about-us.css
@@ -37,11 +37,14 @@
 .about-title {
   margin: 15px 0;
   text-transform: capitalize;
+  font-family: 'ralewaysemibold';
+  
 }
 .about-details-wrap {
   padding-top: 15px;
   position: relative;
   padding-bottom: 20px;
+  line-height: 24px;
 }
 .about-details-wrap:after {
   position: absolute;
@@ -76,5 +79,6 @@
   text-transform: uppercase;
   padding: 8px 20px;
   width: 150px;
-  margin-top: 15px;
+  margin-top: 35px;
+  font-family: 'ralewaybold';        
 }
