--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -158,6 +158,7 @@ body,
 body {
   font-family: 'ralewayregular', helvetica;
   color: #545454;
+  font-size: 14px;
 }
 
 a {
@@ -629,7 +630,9 @@ a:focus {
   text-transform: uppercase;
   font-size: 14px;
   padding: 8px 0;
-  font-family: 'Quicksand-Bold';
+  /* font-family: 'Quicksand-Bold'; */
+  font-family: 'ralewaybold';
+  
 }
 
 .outline-btn:hover,
