--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -487,6 +487,25 @@ div.filepicker {
 .photo-selection-count-with-progress {
   cursor: text;
 }
+.album-image-wrap.selected-photo-name-wrapper:after {
+  position: absolute;
+  bottom: 0;
+  left: 15px;
+  background: rgba(249, 161, 29, 0.9);
+  color: #fff;
+  height: 30px;
+  width: calc(100% - 30px);
+  font-size: 14px;
+  line-height: 30px;
+  text-align: center;
+  font-family: 'ralewaysemibold';
+  letter-spacing: 1px;
+  z-index: 2;
+}
+.album-image-wrap.selected-photo-name-wrapper .set-cover-pic {
+  opacity: 1;
+  left: 0;
+}
 /* album detail page css end */
 
 /* admin header page css start */
